<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_multiplot2</name>
  <version>0.0.0</version>
  <description>The control package</description>

  <maintainer email="lennart.alff@gmail.com">Thies Lennart Alff</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <author email="lennart.alff@gmail.com">Thies Lennart Alff</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>qt_gui_py_common</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>rqt_py_common</depend>
  <depend>python_qt_binding</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>
</package>
